# platform.core.security.drm-service-core-tizen

./: CMakeLists.txt  LICENSE.Flora  NOTICE  drm-service-core-sapps.manifest  drm-service-core-sapps.pc.in  drm-service-core-tizen.manifest  drm-service-core-tizen.pc.in  project.config
include/: drm-oem-sapps.h  drm-tizen-apps.h  drm-tizen-error.h  drm-tizen-mid.h
lib/arm/: libdrm-service-core-sapps.so.0.2.8  libdrm-service-core-tizen.so.0.2.9
lib/ix86/: libdrm-service-core-sapps.so.0.2.8  libdrm-service-core-tizen.so.0.2.9
packaging/: drm-service-core-sapps.spec  drm-service-core-tizen.spec
resource/: ro_root_cert.pem
service/: .drm-tapps.cpp.swp  drm-tapps-initialize.cpp  drm-tapps.cpp
tadcore/DrmFileHandleMgr/: DrmFileApi.cpp  DrmFileHandler.cpp  DrmFileMgr.cpp
tadcore/Svc/: DrmTdcSvc.cpp
tadcore/TADCCore/: TADC_Core.cpp  TADC_Sub.cpp  TADC_Util.cpp
tadcore/TADCInterface/: DUIDGenerator.cpp  TADC_IF.cpp
tadcore/XMLParser/: CPointerArray.cpp  CXMLAttribute.cpp  CXMLElement.cpp  CXMLFile.cpp
tadcore/include/: CPointerArray.h  CXMLAttribute.h  CXMLElement.h  CXMLFile.h  DUIDGenerator.h  DrmFileApi.h  DrmFileHandler.h  DrmFileMgr.h  DrmTdcSvc.h  TADC_Core.h  TADC_ErrorCode.h  TADC_IF.h  TADC_Sub.h  TADC_Util.h  TadcTypes.h
tappsd/inc/: DTapps2Base64.h  DTapps2HMAC.h  DTapps2Rights.h  DTapps2SqliteDB.h  DTapps2Time.h  drm_intf_tapps.h
tappsd/src/db/: DTapps2SqlData.cpp  DTapps2SqliteDB.cpp
tappsd/src/intf/: drm_intf_tapps.cpp
tappsd/src/rights/: DTapps2Rights.cpp
tappsd/src/util/: DTapps2Base64.cpp  DTapps2HMAC.cpp  DTapps2Time.cpp
test/: CMakeLists.txt  drm_testapps.cpp  drm_testcore.cpp  drm_testcore.h  drm_testutil.cpp  drm_testutil.h
test/sample_contents/DB/: .dtapps.db  .dtapps.db-journal
test/sample_contents/DCF/: 38EIfBurLJ.tpk  8SPXfqc6iL.tpk  X5YVR2zmQZ.tpk  ZdAXXZx2HZ.tpk  basiccoreuiapp_drm.tpk  lXs4HhBlYZ.tpk
test/sample_contents/DecryptedApp/: 38EIfBurLJ_dec.tpk  8SPXfqc6iL_dec.tpk  basiccoreuiapp_signed.tpk
test/sample_contents/DecryptedTPK/: X5YVR2zmQZ.tpk.dec  ZdAXXZx2HZ.tpk.dec  lXs4HhBlYZ.tpk.dec
test/sample_contents/KEYS/: ro_test_root_ca.key  ro_test_root_ca.pem  ro_test_second_ca.key  ro_test_second_ca.pem  ro_test_signer.key  ro_test_signer.pem
test/sample_contents/RO/: 38EIfBurLJ-1.0.2.cert_chain_invalid.ro  38EIfBurLJ-1.0.2.cert_invalid.ro  38EIfBurLJ-1.0.2.cert_only_selfsigned.ro  38EIfBurLJ-1.0.2.ro  38EIfBurLJ-1.0.2.ro_template  38EIfBurLJ-1.0.2.signature_invalid.ro  8SPXfqc6iL-1.0.0.ro  8SPXfqc6iL-1.0.0.signature_invalid.ro  FightGuiIF-1.0.0.ro  FightGuiIF-1.0.0.signature_invalid.ro  X5YVR2zmQZ.cert_chain_invalid.ro  X5YVR2zmQZ.ro  X5YVR2zmQZ.signature_invalid.ro  ZdAXXZx2HZ.cert_invalid.ro  ZdAXXZx2HZ.ro  ZdAXXZx2HZ.signature_invalid.ro  dtapps.db  lXs4HhBlYZ.cert_only_selfsigned.ro  lXs4HhBlYZ.ro  lXs4HhBlYZ.signature_invalid.ro
test/sample_contents/ROv2/: sample_1.ro  sample_2.ro
