CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET (this_target drm-service-core-tizen)

CONFIGURE_FILE(drm-service-core-tizen.pc.in ${CMAKE_SOURCE_DIR}/drm-service-core-tizen.pc @ONLY)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/drm-service-core-tizen.pc DESTINATION lib/pkgconfig)

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION /usr/include/drm-tizen/ FILES_MATCHING PATTERN "*.h")

IF("${ARCH}" MATCHES "arm")
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/lib/arm/ DESTINATION /usr/lib FILES_MATCHING PATTERN "*"
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
		        GROUP_EXECUTE GROUP_READ
				        WORLD_EXECUTE WORLD_READ)                     
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/bin/arm/ DESTINATION /usr/bin FILES_MATCHING PATTERN "*"
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
		        GROUP_EXECUTE GROUP_READ
				        WORLD_EXECUTE WORLD_READ)                     
ELSE("${ARCH}" MATCHES "arm")
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/lib/ix86/ DESTINATION /usr/lib FILES_MATCHING PATTERN "*"
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
		        GROUP_EXECUTE GROUP_READ
				        WORLD_EXECUTE WORLD_READ)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/bin/ix86/ DESTINATION /usr/bin FILES_MATCHING PATTERN "*"
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
		        GROUP_EXECUTE GROUP_READ
				        WORLD_EXECUTE WORLD_READ)
ENDIF("${ARCH}" MATCHES "arm")
